# libemsha

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  Dockerfile  Makefile.am  README.md  README.rst  TODO.rst  autobuild  cleanroom  configure.ac  do-release.in  emsha.cc  emsha.pc.in  hmac.cc  sha256.cc  test_emsha.cc  test_hmac.cc  test_mem.cc  test_sha256.cc  test_utils.cc  test_utils.h
.circleci/: config.yml
.trunk/: trunk.yaml
cmake/: docs.cmake  emshaConfig.cmake  install.cmake  packaging.cmake
debian/: changelog  control  copyright  libemsha-1.docs  libemsha-1.install
debian/patches/: release-1.0.2-patch  series
doc/: Makefile  Makefile.bak  libemsha.rst
doc/source/: conf.py.in  header.rst.in
doc/sphinx/: Makefile
doc/sphinx/source/: conf.py.in  hmac.rst  index.rst  intro.rst  misc.rst  sha256.rst
docs/: emsha.3.md  libemsha.7.md  mainpage.md
emsha/: emsha.h  hmac.h  internal.h  sha256.h
scripts/: check-code.sh  install-cmake-debian.sh  install-depdendencies.sh  setup-cmake.sh
src/: Makefile.am  emsha.cc  hmac.cc  internal.hh  sha256.cc  test_emsha.cc  test_utils.cc  test_utils.hh
src/emsha/: emsha.hh  hmac.hh  sha256.hh
